// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulation regression (10 diverse scenarios) > 01-historisch-2025 1`] = `
{
  "hour0": {
    "batterieSocGWh": 0,
    "co2Tph": 11087.7,
    "curtailmentGW": 0,
    "exportGW": 11.051,
    "h2SocGWh": 0,
    "importGW": 0,
    "loadGW": 47.742,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 53.025,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 12731.99,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 4.981,
    "loadGW": 56.757,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 50.332,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 15460.64,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 0.951,
    "loadGW": 50.365,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 49.018,
  },
  "summary": {
    "co2GperKWh": 346.55,
    "co2MtPerYear": 161.431,
    "curtailmentTWh": 0,
    "exportTWh": 12.163,
    "hoursWithLoadShedding": 0,
    "importTWh": 34.117,
    "loadSheddingTWh": 0,
    "peakLoadGW": 75.64,
    "renewableSharePct": 56.67,
    "renewableTWh": 263.966,
    "securityStatus": "stabil",
    "totalDemandTWh": 465.818,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 02-default-custom 1`] = `
{
  "hour0": {
    "batterieSocGWh": 13.145,
    "co2Tph": 8745.31,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.05,
    "importGW": 0,
    "loadGW": 47.742,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 22.5,
    "storageChargeGW": 0.806,
    "storageDischargeGW": 0,
    "supplyGW": 48.548,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 10173.76,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 3.085,
    "loadGW": 56.757,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 5.201,
    "supplyGW": 48.471,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 12138.9,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 11.654,
    "loadGW": 50.365,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 38.711,
  },
  "summary": {
    "co2GperKWh": 318.51,
    "co2MtPerYear": 148.369,
    "curtailmentTWh": 0,
    "exportTWh": 2.249,
    "hoursWithLoadShedding": 0,
    "importTWh": 79.92,
    "loadSheddingTWh": 0,
    "peakLoadGW": 75.64,
    "renewableSharePct": 55.96,
    "renewableTWh": 260.672,
    "securityStatus": "stabil",
    "totalDemandTWh": 465.818,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 03-vollelektrifizierung 1`] = `
{
  "hour0": {
    "batterieSocGWh": 2.5,
    "co2Tph": 53753.84,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.05,
    "importGW": 13,
    "loadGW": 220.295,
    "loadSheddingGW": 86.675,
    "pumpspeicherSocGWh": 13.1,
    "storageChargeGW": 0,
    "storageDischargeGW": 19.4,
    "supplyGW": 101.22,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 54256.87,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.05,
    "importGW": 13,
    "loadGW": 236.772,
    "loadSheddingGW": 122.628,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 101.144,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 53651.08,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.05,
    "importGW": 13,
    "loadGW": 259.758,
    "loadSheddingGW": 155.374,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 91.384,
  },
  "summary": {
    "co2GperKWh": 228.95,
    "co2MtPerYear": 471.145,
    "curtailmentTWh": 0,
    "exportTWh": 0,
    "hoursWithLoadShedding": 8760,
    "importTWh": 113.88,
    "loadSheddingTWh": 1158.964,
    "peakLoadGW": 330.94,
    "renewableSharePct": 12.67,
    "renewableTWh": 260.672,
    "securityStatus": "kritisch",
    "totalDemandTWh": 2057.837,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 04-100ee-no-import-style 1`] = `
{
  "hour0": {
    "batterieSocGWh": 300,
    "co2Tph": 1835.37,
    "curtailmentGW": 90.81,
    "exportGW": 25,
    "h2SocGWh": 50000,
    "importGW": 0,
    "loadGW": 47.742,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 45,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 72.742,
  },
  "hour4000": {
    "batterieSocGWh": 300,
    "co2Tph": 3427.77,
    "curtailmentGW": 43.784,
    "exportGW": 25,
    "h2SocGWh": 50000,
    "importGW": 0,
    "loadGW": 56.757,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 45,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 81.757,
  },
  "hour8000": {
    "batterieSocGWh": 300,
    "co2Tph": 1943,
    "curtailmentGW": 41.349,
    "exportGW": 25,
    "h2SocGWh": 50000,
    "importGW": 0,
    "loadGW": 50.365,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 45,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 75.365,
  },
  "summary": {
    "co2GperKWh": 42.73,
    "co2MtPerYear": 19.906,
    "curtailmentTWh": 226.359,
    "exportTWh": 122.59,
    "hoursWithLoadShedding": 7,
    "importTWh": 0,
    "loadSheddingTWh": 0.022,
    "peakLoadGW": 75.64,
    "renewableSharePct": 133.75,
    "renewableTWh": 623.013,
    "securityStatus": "angespannt",
    "totalDemandTWh": 465.818,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 05-windon-dominant-with-battery 1`] = `
{
  "hour0": {
    "batterieSocGWh": 165,
    "co2Tph": 2214.94,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.05,
    "importGW": 0,
    "loadGW": 47.742,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 25.858,
    "storageChargeGW": 54.198,
    "storageDischargeGW": 0,
    "supplyGW": 101.94,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 5287.15,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 13,
    "loadGW": 56.757,
    "loadSheddingGW": 5.494,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 38.264,
  },
  "hour8000": {
    "batterieSocGWh": 250,
    "co2Tph": 1819.59,
    "curtailmentGW": 0,
    "exportGW": 21.162,
    "h2SocGWh": 0.1,
    "importGW": 0,
    "loadGW": 50.365,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 45,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 71.528,
  },
  "summary": {
    "co2GperKWh": 60.27,
    "co2MtPerYear": 28.075,
    "curtailmentTWh": 19.757,
    "exportTWh": 34.595,
    "hoursWithLoadShedding": 3476,
    "importTWh": 50.619,
    "loadSheddingTWh": 62.519,
    "peakLoadGW": 75.64,
    "renewableSharePct": 84.15,
    "renewableTWh": 391.972,
    "securityStatus": "kritisch",
    "totalDemandTWh": 465.818,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 06-windoff-with-huge-h2 1`] = `
{
  "hour0": {
    "batterieSocGWh": 0,
    "co2Tph": 5215.41,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 13,
    "loadGW": 47.742,
    "loadSheddingGW": 1.997,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 32.745,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 4991.91,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 13,
    "loadGW": 56.757,
    "loadSheddingGW": 28.205,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 15.552,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 5108.66,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 13,
    "loadGW": 50.365,
    "loadSheddingGW": 12.832,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 24.533,
  },
  "summary": {
    "co2GperKWh": 94.1,
    "co2MtPerYear": 43.834,
    "curtailmentTWh": 0,
    "exportTWh": 0,
    "hoursWithLoadShedding": 8571,
    "importTWh": 113.334,
    "loadSheddingTWh": 195.581,
    "peakLoadGW": 75.64,
    "renewableSharePct": 33.68,
    "renewableTWh": 156.902,
    "securityStatus": "kritisch",
    "totalDemandTWh": 465.818,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 07-kohle-phaseout 1`] = `
{
  "hour0": {
    "batterieSocGWh": 7.726,
    "co2Tph": 2216.71,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.05,
    "importGW": 0,
    "loadGW": 47.742,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 22.5,
    "storageChargeGW": 0,
    "storageDischargeGW": 4.774,
    "supplyGW": 42.968,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 7047.55,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 13,
    "loadGW": 56.757,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 43.757,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 8105.79,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 13,
    "loadGW": 50.365,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 37.365,
  },
  "summary": {
    "co2GperKWh": 204.06,
    "co2MtPerYear": 95.056,
    "curtailmentTWh": 0,
    "exportTWh": 0.197,
    "hoursWithLoadShedding": 568,
    "importTWh": 92.443,
    "loadSheddingTWh": 3.171,
    "peakLoadGW": 75.64,
    "renewableSharePct": 55.96,
    "renewableTWh": 260.672,
    "securityStatus": "kritisch",
    "totalDemandTWh": 465.818,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 08-pv-dominant-with-lkw 1`] = `
{
  "hour0": {
    "batterieSocGWh": 2.5,
    "co2Tph": 10296.27,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.05,
    "importGW": 13,
    "loadGW": 50.511,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 13.1,
    "storageChargeGW": 0,
    "storageDischargeGW": 19.4,
    "supplyGW": 18.111,
  },
  "hour4000": {
    "batterieSocGWh": 25,
    "co2Tph": 4742.46,
    "curtailmentGW": 26.883,
    "exportGW": 25,
    "h2SocGWh": 0.1,
    "importGW": 0,
    "loadGW": 68.624,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 45,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 93.624,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 20860.95,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 13,
    "loadGW": 64.605,
    "loadSheddingGW": 6.933,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 44.672,
  },
  "summary": {
    "co2GperKWh": 225.72,
    "co2MtPerYear": 120.786,
    "curtailmentTWh": 97.614,
    "exportTWh": 45.689,
    "hoursWithLoadShedding": 2378,
    "importTWh": 79.842,
    "loadSheddingTWh": 28.405,
    "peakLoadGW": 89.6,
    "renewableSharePct": 59.1,
    "renewableTWh": 316.276,
    "securityStatus": "kritisch",
    "totalDemandTWh": 535.118,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 09-heizung-only 1`] = `
{
  "hour0": {
    "batterieSocGWh": 2.5,
    "co2Tph": 8745.31,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.05,
    "importGW": 0,
    "loadGW": 66.513,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 14.535,
    "storageChargeGW": 0,
    "storageDischargeGW": 17.965,
    "supplyGW": 48.548,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 10173.76,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 3.085,
    "loadGW": 56.757,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 5.201,
    "supplyGW": 48.471,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 37646.24,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 13,
    "loadGW": 86.61,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 73.61,
  },
  "summary": {
    "co2GperKWh": 392.48,
    "co2MtPerYear": 239.915,
    "curtailmentTWh": 0,
    "exportTWh": 0.676,
    "hoursWithLoadShedding": 929,
    "importTWh": 96.139,
    "loadSheddingTWh": 11.538,
    "peakLoadGW": 131.58,
    "renewableSharePct": 42.64,
    "renewableTWh": 260.672,
    "securityStatus": "kritisch",
    "totalDemandTWh": 611.273,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 10-industrie-heavy 1`] = `
{
  "hour0": {
    "batterieSocGWh": 2.5,
    "co2Tph": 13836.99,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.05,
    "importGW": 13,
    "loadGW": 142.079,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 13.1,
    "storageChargeGW": 0,
    "storageDischargeGW": 19.4,
    "supplyGW": 109.679,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 52761.26,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.05,
    "importGW": 13,
    "loadGW": 153.665,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 140.665,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 54223.87,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.05,
    "importGW": 13,
    "loadGW": 147.396,
    "loadSheddingGW": 0.791,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 133.606,
  },
  "summary": {
    "co2GperKWh": 322.51,
    "co2MtPerYear": 421.588,
    "curtailmentTWh": 0,
    "exportTWh": 0,
    "hoursWithLoadShedding": 5781,
    "importTWh": 113.19,
    "loadSheddingTWh": 181.427,
    "peakLoadGW": 172.62,
    "renewableSharePct": 42.24,
    "renewableTWh": 552.224,
    "securityStatus": "kritisch",
    "totalDemandTWh": 1307.228,
  },
}
`;
